Fix overlap issue between allegations and footer
When users want to add a comment at the end of the document
(near the footer) part of the allegations layer is rendered below the
footer and the `Publish comment` button is not accessible.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -124,3 +124,7 @@ body:not(.admin) {
 .form-error {
   font-size: $small-font-size;
 }
+
+.calc-comments {
+  z-index: 1;
+}
